src/Resources/Css/main.css
.main {
  padding: 20px 15px;
  position: relative;
  z-index: -1;
}

.featured__title {
  border-bottom: 1px solid #808080;
  font-weight: bold;
  text-transform: capitalize;
  margin-bottom: 20px;
  padding-bottom: 10px;
}

.featured__playlists {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  gap: 30px;
}
/*# sourceMappingURL=main.css.map */

